# SimpleCompiler

./: .gitignore  CMakeLists.txt  README.md
SimpleCompiler/: AttributeSymbol.cpp  AttributeSymbol.h  Classify.txt  Grammer.cpp  Grammer.h  Grammer.txt  Lexer.cpp  Lexer.h  Machine.cpp  Machine.h  Parser.cpp  Parser.h  Quaternion.h  ReflectBase.h  Scanner.cpp  Semantic.txt  SemanticAction.cpp  SemanticAction.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticsFunction.cpp  SimpleCompiler.cpp  SimpleCompiler.sln  SimpleCompiler.vcxproj  SimpleCompiler.vcxproj.filters  Symbol.cpp  Symbol.h  SyntaxTree.cpp  Token.h  Utility.cpp  code.txt
include/Generator/: Generator.h
include/Lexer/: Lexer.h  Token.h
include/Optimization/: Block.h  Optimization.h
include/Output/: Exception.h  Log.h  Output.h
include/Parser/: Grammer.h  Machine.h  Parser.h  Symbol.h
include/Reflect/: ReflectBase.h
include/Semantic/: AttributeSymbol.h  Quaternion.h  SemanticAction.h  SemanticAnalyzer.h
info/: Classify.txt  Grammer.txt  Semantic.txt  code.txt
src/: SimpleCompiler.cpp  Utility.cpp
src/Generator/: Generator.cpp
src/Lexer/: Lexer.cpp  Scanner.cpp
src/Optimization/: Optimization.cpp
src/Output/: Log.cpp  Output.cpp
src/Parser/: Grammer.cpp  Machine.cpp  Parser.cpp  Symbol.cpp  SyntaxTree.cpp
src/Semantic/: AttributeSymbol.cpp  IDTable.cpp  SemanticAction.cpp  SemanticAnalyzer.cpp  SemanticsFunction.cpp
